# pdf_search_engine

./: .gitignore  A blueprint for an AI co-reviewer.md  CHANGELOG.md  README.md  convert_to_markdown.py  pdf_search_engine.py  pyproject.toml
.github/workflows/: ci.yml
scholarpeer/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
scholarpeer/config/: default.yaml
scholarpeer/docs/: ARCHITECTURE.md  DEPLOYMENT.md
scholarpeer/scripts/: build_index.py  build_visual_index.py  ingest_corpus.py  run_review.py  setup_qdrant.py
scholarpeer/src/scholarpeer/: __init__.py  cli.py  config.py  logging.py
scholarpeer/src/scholarpeer/agents/: __init__.py  base.py  leader.py  tools.py
scholarpeer/src/scholarpeer/agents/specialists/: __init__.py  _shared.py  clarity.py  methodology.py  novelty.py  related_work.py  reproducibility.py
scholarpeer/src/scholarpeer/eval/: __init__.py  citation_grounding.py
scholarpeer/src/scholarpeer/graph/: __init__.py  extract.py  store.py  traverse.py
scholarpeer/src/scholarpeer/index/: __init__.py  chunker.py  colpali_indexer.py  embeddings.py  indexer.py  qdrant_client.py
scholarpeer/src/scholarpeer/ingest/: __init__.py  grobid.py  markdown_parser.py  mineru.py  pipeline.py
scholarpeer/src/scholarpeer/llm/: __init__.py  anthropic_api.py  base.py  claude_code.py
scholarpeer/src/scholarpeer/retrieve/: __init__.py  external.py  fusion.py  hybrid.py  rerank.py  visual.py
scholarpeer/src/scholarpeer/schemas/: __init__.py  paper.py  retrieval.py  review.py
scholarpeer/src/scholarpeer/synthesize/: __init__.py  formatter.py  self_feedback.py
scholarpeer/src/scholarpeer/utils/: __init__.py  hashing.py
scholarpeer/tests/integration/: test_qdrant_roundtrip.py
scholarpeer/tests/unit/: test_chunker.py  test_fusion.py  test_grounding.py  test_hashing.py  test_markdown_ingest.py  test_schemas.py
tests/: test_search_engine.py
