[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-search-engine"
version = "0.1.0"
description = "Multi-source academic PDF search and download engine with PDF-to-Markdown conversion"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Kyeong Sun Kim", email = "ksk5429@users.noreply.github.com" },
]
keywords = [
    "academic-papers",
    "pdf-download",
    "literature-review",
    "openalex",
    "semantic-scholar",
    "unpaywall",
    "pdf-to-markdown",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
convert = [
    "pymupdf4llm>=0.0.17",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/ksk5429/pdf_search_engine"
Repository = "https://github.com/ksk5429/pdf_search_engine"

[tool.pytest.ini_options]
testpaths = ["tests"]
