[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "scholarpeer"
version = "0.1.0"
description = "Citation-grounded AI co-reviewer: MARG-style multi-agent RAG over MinerU-parsed scientific corpora."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kyeong Sun Kim", email = "ksk54299@gmail.com" }]
keywords = ["rag", "peer-review", "claude", "qdrant", "mineru", "colpali", "openalex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]

dependencies = [
  # Core
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "rich>=13.7",
  "httpx[http2]>=0.27",
  "tenacity>=9.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "structlog>=24.1",

  # Vector store
  "qdrant-client[fastembed]>=1.12",

  # Embeddings & rerank
  "sentence-transformers>=3.0",
  "FlagEmbedding>=1.2",
  "transformers>=4.44",
  "torch>=2.3",

  # Ingest
  "requests>=2.32",
  "lxml>=5.2",

  # LLM clients
  "anthropic>=0.39",
  "claude-agent-sdk>=0.1.0",

  # Text processing
  "tiktoken>=0.7",
  "rank-bm25>=0.2.2",
  "nltk>=3.9",
  "regex>=2024.5",

  # Graph
  "networkx>=3.3",

  # Visual retrieval (ColPali)
  "pillow>=10.3",
  "pdf2image>=1.17",
]

[project.optional-dependencies]
mineru = ["magic-pdf[full]>=1.0"]
colpali = ["colpali-engine>=0.3", "byaldi>=0.0.5"]
lightrag = ["lightrag-hku>=0.1"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "bandit>=1.7",
  "pre-commit>=3.7",
]

[project.scripts]
scholarpeer = "scholarpeer.cli:app"

[project.urls]
Homepage = "https://github.com/ksk5429/scholarpeer"
Issues = "https://github.com/ksk5429/scholarpeer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scholarpeer"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "PIE", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: unit tests (no IO)",
  "integration: integration tests (local services)",
  "e2e: end-to-end tests (requires Qdrant, GROBID, GPU)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/scholarpeer"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
